--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
             </build>
         </profile>
         <profile>
-            <id>checkstyle-findbugs</id>
+            <id>checkstyle</id>
             <build>
                 <plugins>
                     <plugin>
@@ -167,6 +167,13 @@
                             </execution>
                         </executions>
                     </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>findbugs</id>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>findbugs-maven-plugin</artifactId>
