--- a/Kitodo/pom.xml
+++ b/Kitodo/pom.xml
@@ -662,6 +662,11 @@
             <version>${spring.security.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>uikit</artifactId>
             <version>2.26.3</version>
