--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -433,7 +433,8 @@
                                     "type": "keyword",
                                     "ignore_above": 256
                                 }
-                            }
+                            },
+                            "fielddata": true
                         }
                     }
                 },
