--- a/Kitodo/src/main/resources/mapping.json
+++ b/Kitodo/src/main/resources/mapping.json
@@ -555,7 +555,7 @@
                         }
                     }
                 },
-                "authorizations": {
+              "authorities": {
                     "properties": {
                         "id": {
                             "type": "long"
